--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %} {% block content %}
 <div class="container">
+
+    <div class="page-header">
+        <h1>Documentation</h1>
+    </div>
+
     <div class="row">
         <div class="span4">
             <div class="well">
