Site plans page and dashboard plans table styling. case 1144

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -44,6 +44,7 @@
 </head>
 {% set navigation_bar = [
     ('/blog', 'blog', 'Blog'),
+    ('/plans', 'plans', 'Plans'),
     ('/doc', 'documentation', 'Documentation'),
     ('/dashboard.html', 'dashboard', 'Dashboard'),
 ] -%}
@@ -125,6 +126,7 @@
                     </h3>
                     <ul class="unstyled">
                         <li><a href="/blog">Blog</a></li>
+                        <li><a href="/plans">Plans</a></li>
                         <li><a href="/about/story">Story</a></li>
                         <li><a href="/about/eula">Terms of Service</a></li>
                     </ul>
