Edit project name and description support. case 1084
* "In-place" editing. The name/description pane
  is replaced by a form with Update and Cancel
* /project_info PUT support in REST protocol. 
  Only the name and description is updated
* Removed default description: "(no description)"
* Email null-pointer fix related to when not signed in 
  (gravatar)

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap-defold.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap-defold.css
@@ -183,3 +183,10 @@ table.table-credit-card {
 table.table-credit-card td {
     padding-right: 3em;
 }
+
+/* Project */
+
+div.project-owner:hover {
+    cursor: pointer;
+    background-color: whiteSmoke;
+}
