Improved titles. case 1150
* Use asciidoc title
* Updated the guides
* Reference docs titles

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/asciidoc.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/asciidoc.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} {{ title }} {% endblock %}
 {% block content %}
 <div class="container">
     <div class="asciidoc">
