--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/blog_index.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/blog_index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %} Defold Development Blog {% endblock %}
 {% block content %}
 <div class="container">
     <div class="asciidoc">
