Google Web Font fix. case 1150
* Link to css should be at top in header
* No sizes where specified (problem with FF)

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<title>{% block title %}Defold{% endblock %}</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="">
-<meta name="author" content="">
-<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 <link href="{{root}}bootstrap/css/bootstrap.css" rel="stylesheet">
 <link href="{{root}}bootstrap-defold.css" rel="stylesheet">
 <link href="{{root}}asciidoc-new.css" rel="stylesheet">
@@ -21,6 +16,12 @@
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 <link rel="shortcut icon" href="{{root}}favicon.ico">
+
+<meta charset="utf-8">
+<title>{% block title %}Defold{% endblock %}</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="description" content="">
+<meta name="author" content="">
 
 <!--  Google analytics -->
 <!--  NOTE: The account id is duplicated in Defold#GoogleAnalyticsHandler -->
