Bootstrap responsive tweaks. case 1150
* Disable navbar collapse

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap/css/bootstrap-responsive.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap/css/bootstrap-responsive.css
@@ -679,6 +679,9 @@
   }
 }
 
+/*
+// Navbar collapse on small screens disabled
+NOTE: Defold change
 @media (max-width: 979px) {
   body {
     padding-top: 0;
@@ -806,6 +809,7 @@
     padding-left: 10px;
   }
 }
+*/
 
 @media (min-width: 980px) {
   .nav-collapse.collapse {
