Unified syntax highlighting for lua code. case 1193
* Google prettify
 - Reference docs
 - Asciidoc. [source-code, lua] should be used
   instead of [source, lua]
* Added asciidoc 8.6.7 to "ext". No longer a 
  dependency (locally installed)

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap-defold.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap-defold.css
@@ -27,6 +27,14 @@ html {
     overflow-y: scroll;
 }
 
+a {
+    color: #00b4ff;
+}
+
+a:hover {
+    color: #4b4b4b;
+}
+
 /*
  Override default bootstrap fonts
  */
