--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -90,6 +90,9 @@
                             %}><a href="{{ href|e }}">{{ caption|e }}</a></li>
                         {% endfor %}
                     </ul>
+                    <form class="navbar-search pull-right" action="/search" _lpchecked="1">
+                        <input type="text" class="search-query span2" placeholder="Search" name="q"/>
+                    </form>
                 </div>
             </div>
         </div>
