--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/blog_template.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/blog_template.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
+{% block title %} {{ post.title }} {% endblock %}
+
 {% block content %}
 <div class="container">
     <div class="asciidoc">
-    {{ blog }}
+    {{ post.content }}
     </div>
 </div>
 {% endblock %}
