--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -133,6 +133,7 @@
                         <li><a href="/plans">Plans</a></li>
                         <li><a href="/about/story">Story</a></li>
                         <li><a href="/about/eula">Terms of Service</a></li>
+                        <li><a href="/about/privacy">Privacy Policy</a></li>
                     </ul>
                 </div>
                 <div class="span4">
