New landing page. case 1221
* Replaceable navbar in base.html
* Moved javascript code to defold.js
* Bootstrap tweaks: 
 - hX bold -> 600
 - margin for testimonials author

--- a/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap-defold.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap-defold.css
@@ -22,6 +22,14 @@
     margin-top: 0.5em;
 }
 
+blockquote small {
+    margin-top: 1em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 600;
+}
+
 /* Always show scrollbar */
 html {
     overflow-y: scroll;
