--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -77,6 +77,7 @@
         })();
     </script>
 
+    {% block navbar %}
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <div class="container">
@@ -97,6 +98,8 @@
             </div>
         </div>
     </div>
+    {% endblock %}
+
     {% block content %}{% endblock %}
 
     {% if disqus %}
