--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -1,158 +1,110 @@
 {% extends "base.html" %} {% block title %} Defold Game Engine {% endblock %} {% block end %}
-
+<script type="text/javascript" src="defold.js"></script>
 <script type="text/javascript">
-    /* Client side redirection for compatibility with old URL:s */
-
-    var href = window.location.href;
-    if (href.match(/.*?#[!]?blog[:]?$/)) {
-    	window.location.href = "/blog";
-    }
-    else if (href.match(/.*?#[!]?documentation[:]?$/)) {
-        window.location.href = "/doc";
-    }
-    else if (href.match(/.*?#[!]?guide:(.*?)$/)) {
-        window.location.href = "/doc/" + RegExp.$1;
-    }
-    else if (href.match(/.*?#[!]?tutorials:(.*?)$/)) {
-        window.location.href = "/doc/" + RegExp.$1;
-    }
-    else if (href.match(/.*?#[!]?script_sample:(.*?)$/)) {
-        window.location.href = "/doc/" + RegExp.$1;
-    }
-    else if (href.match(/.*?#[!]?content:(.*?)$/)) {
-        window.location.href = "/about/" + RegExp.$1;
-    }
-    else if (href.match(/.*?#[!]?reference:(.*?)\/(.*?)$/)) {
-        window.location.href = "/ref/" + RegExp.$1 + "#" + RegExp.$2;
-    }
+	compatRedirect();
 </script>
-
 <link rel="stylesheet" type="text/css" href="shadowbox/shadowbox.css">
 <link href="landing.css" rel="stylesheet">
 <script type="text/javascript" src="shadowbox/shadowbox.js"></script>
 <script type="text/javascript">
 	Shadowbox.init();
 </script>
-{% endblock %} {% block content %}
-<div id="landing">
-    <div class="splash">
-        <div class="container">
-            <div class="row">
-                <div class="span5">
-                    <div class="landing-text">
-                        <h1>Defold now in open Beta!</h1>
-                        <p>We are happy to announce that Defold is now in open beta At least in a semi-open beta
-                            stage. We invite from the beta list at regular intervals. Bla bla, yada, yada, ...</p>
-                    </div>
-                </div>
-                <!-- /landing-text -->
-                <div class="span7 landing-screenshot">
-                    <a class="video-link"
-                        href="http://vimeo.com/moogaloop.swf?clip_id=45352560&amp;amp;server=vimeo.com&amp;amp;show_title=1&amp;amp;show_byline=1&amp;amp;autoplay=1"
-                        title="Defold Introduction" rel="shadowbox;width=768;height=432;"> <img
-                        alt="Introduction video" src="images/intro-video.png" /></a>
-                </div>
+{% endblock %} {% block navbar %} {% endblock %} {% block content %}
+<div class="landing">
+    <div class="navbar">
+        <div class="navbar-inner">
+            <div class="container">
+                <a class="brand" href="/">&nbsp;</a>
+                <ul class="nav pull-right">
+                    <li><a href="/blog">Blog</a></li>
+                    <li><a href="/doc">Documentation</a></li>
+                    <li><a href="/dashboard.html">Dashboard</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="landing-heading">
+        <div>
+            <h1>Creative Tools For Digital Rebels</h1>
+        </div>
+    </div>
+    <div class="laptop">
+        <a class="play" rel="shadowbox;width=640;height=360;" alt="Defold Introduction Video"
+            href="http://player.vimeo.com/video/45352560?byline=0&amp;portrait=0&amp;color=ffffff&amp;autoplay=1"></a>
+    </div>
+</div>
+<div style="height: 50px;"></div>
+<div class="container features features-red">
+    <div class="row">
+        <div class="span8">
+            <h2>Faster than lightning</h2>
+            <p>Prototype, build, polish and iterate Test your changes in the running game within seconds iOS will be
+                supported in beta, Android later</p>
+            <h2>Simple tools, complete power</h2>
+            <p>Make tiled graphics and animated sprites with physics that just work Everything is scriptable - even
+                the rendering pipeline! Runs on Windows, Mac and Linux</p>
+        </div>
+        <div class="span4">
+            <div class="feature-image">
+                <img src="images/pong.png" alt="Pong" />
             </div>
         </div>
     </div>
 </div>
-<div class="container">
-    <div style="text-align: center;">
-        <script type="text/javascript">
-									function signUp() {
-										var email = $("#email")[0].value;
-										$
-												.ajax({
-													type : "PUT",
-													url : "http://cr.defold.com:9998/prospects/"
-															+ email
-												})
-										$("#email").val("");
-										return false;
-									}
-								</script>
-        <!--
-        <header class="landing">
-            <h1>Defold Game Engine</h1>
-            <p>Create games like a pro!</p>
-        </header>
-        <hr class="soften">
-        <a class="video-link"
-            href="http://vimeo.com/moogaloop.swf?clip_id=45352560&amp;amp;server=vimeo.com&amp;amp;show_title=1&amp;amp;show_byline=1&amp;amp;autoplay=1"
-            title="Defold Introduction" rel="shadowbox;width=900;height=506;"> <img alt="Introduction video"
-            src="images/intro-video.png" /></a>
-        <hr class="soften">
-         -->
-    </div>
-    <div class="marketing">
-        <div class="row">
-            <h1>Sign up for beta</h1>
-            <p class="marketing-byline">We invite from the beta list at regular intervals</p>
-            <div class="span12" style="text-align: center;">
-                <form onsubmit="return signUp();" class="validate form-inline">
-                    <input type="email" value="" style="padding: 9px 14px;" class="span4 input-large email" id="email"
-                        placeholder="email address" required="">
-                    <button type="submit" class="btn btn-success btn-large">Sign up</button>
-                </form>
+<div class="container features features-green">
+    <div class="row">
+        <div class="span4">
+            <div class="feature-image">
+                <img src="images/cogs.png" alt="Cogs" />
             </div>
         </div>
-        <hr class="soften">
-        <h1>By game developers, for game developers</h1>
-        <p class="marketing-byline">A tool we would like to use :-)</p>
-        <div class="row">
-            <div class="span8">
-                <div class="row">
-                    <div class="span4">
-                        <img class="bs-icon" src="images/gi/glyphicons_009_magic.png">
-                        <h2>Faster than lightning</h2>
-                        <ul class="unstyled">
-                            <li>Prototype, build, polish and iterate</li>
-                            <li>Test your changes in the running game within seconds</li>
-                            <li>iOS will be supported in beta, Android later</li>
-                        </ul>
-                    </div>
-                    <div class="span4">
-                        <img class="bs-icon" src="images/gi/glyphicons_043_group.png">
-                        <h2>Collaboration included</h2>
-                        <ul class="unstyled">
-                            <li>Share your projects with your friends</li>
-                            <li>Sync your changes with them through Defold - no IT or servers required</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="span4">
-                        <img class="bs-icon" src="images/gi/glyphicons_198_ok.png">
-                        <h2>Simple tools, complete power</h2>
-                        <ul class="unstyled">
-                            <li>Make tiled graphics and animated sprites with physics that just work</li>
-                            <li>Everything is scriptable - even the rendering pipeline!</li>
-                            <li>Runs on Windows, Mac and Linux</li>
-                        </ul>
-                    </div>
-                    <div class="span4">
-                        <img class="bs-icon" src="images/gi/glyphicons_012_heart.png">
-                        <h2>We LOVE game dev</h2>
-                        <ul class="unstyled">
-                            <li>Features and fixes are released every few weeks, not years</li>
-                            <li>Report an issue and we will fix it as soon as we can</li>
-                            <li>Defold is made by senior professional game developers - we would love to help you
-                                make your games shine!</li>
-                            <li>We have a ton of exciting ideas yet to be implemented</li>
-                        </ul>
-                    </div>
-                </div>
+        <div class="span8">
+            <div class="well_">
+                <h2>Collaboration included</h2>
+                <p>Share your projects with your friends Sync your changes with them through Defold - no IT or
+                    servers required</p>
+                <h2>We LOVE game dev</h2>
+                <p>Features and fixes are released every few weeks, not years Report an issue and we will fix it as
+                    soon as we can Defold is made by senior professional game developers - we would love to help you
+                    make your games shine! We have a ton of exciting ideas yet to be implemented</p>
             </div>
-            <div class="span4">
-                <blockquote>
-                    <p>"The Defold engine and tools are built on powerful and simple concepts that are fun to use
-                        because they work with me and allows me to focus on my game's specific design problems. It
-                        clearly shows that the Defold developers have put their long industry experience and massive
-                        design and implementation effort into creating a great, unique platform."</p>
-                    <small>Mikael Säker <br> (Battlefield 3, The Darkness, The Chronicles of Riddick)
-                    </small>
-                </blockquote>
-            </div>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top: 50px;">
+    <div class="row">
+        <div class="span6">
+            <blockquote class="testi-red">
+                <p>"The Defold engine and tools are built on powerful and simple concepts that are fun to use
+                    because they work with me and allows me to focus on my game's specific design problems. It clearly
+                    shows that the Defold developers have put their long industry experience and massive design and
+                    implementation effort into creating a great, unique platform."</p>
+                <small>Mikael Säker <br> (Battlefield 3, The Darkness, The Chronicles of Riddick)
+                </small>
+            </blockquote>
+        </div>
+        <div class="span6">
+            <blockquote class="testi-blue">
+                <p>"The Defold engine and tools are built on powerful and simple concepts that are fun to use
+                    because they work with me and allows me to focus on my game's specific design problems. It clearly
+                    shows that the Defold developers have put their long industry experience and massive design and
+                    implementation effort into creating a great, unique platform."</p>
+                <small>Mikael Säker <br> (Battlefield 3, The Darkness, The Chronicles of Riddick)
+                </small>
+            </blockquote>
+        </div>
+    </div>
+</div>
+<div class="container" style="margin-top: 30px; text-align: center;">
+    <div class="row">
+        <h2>Sign up for beta</h2>
+        <p class="marketing-byline">We invite from the beta list at regular intervals</p>
+        <div class="span12" style="text-align: center;">
+            <form onsubmit="return signUp();" class="validate form-inline">
+                <input type="email" value="" style="padding: 9px 14px;" class="span4 input-large email" id="email"
+                    placeholder="email address" required="">
+                <button type="submit" class="btn2 _btn-primary _btn btn-large">Sign up</button>
+            </form>
         </div>
     </div>
 </div>
