Responsive front-page design. case 1221
* The front-page is now acceptable on iPhone 
  and similar
* The laptop image is scaled accordingly to
  the window size
* Magic css tricks for play button positioning
* Still some work todo with navbar

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -29,8 +29,13 @@
         </div>
     </div>
     <div class="laptop">
-        <a class="play" rel="shadowbox;width=640;height=360;" alt="Defold Introduction Video"
-            href="http://player.vimeo.com/video/45352560?byline=0&amp;portrait=0&amp;color=ffffff&amp;autoplay=1"></a>
+        <div class="play">
+            <a class="play" rel="shadowbox;width=640;height=360;" alt="Defold Introduction Video"
+                href="http://player.vimeo.com/video/45352560?byline=0&amp;portrait=0&amp;color=ffffff&amp;autoplay=1">
+                <img  src="images/laptop_video.png">
+            </a> <img name="play" class="play" src="images/play.png" onmouseover="play.src='images/play_pressed.png'"
+                onmouseout="play.src='images/play.png'">
+        </div>
     </div>
 </div>
 <div style="height: 50px;"></div>
