Css hover for play-image instead of js

--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -34,8 +34,7 @@
             <img src="images/laptop_video.png"> <a class="play" rel="shadowbox;width=640;height=360;"
                 alt="Defold Introduction Video"
                 href="http://player.vimeo.com/video/45352560?byline=0&amp;portrait=0&amp;color=ffffff&amp;autoplay=1">
-                <img name="play" class="play" src="images/play.png" onmouseover="play.src='images/play_pressed.png'"
-                onmouseout="play.src='images/play.png'">
+                <span class="play"></span>
             </a>
         </div>
     </div>
