Defold bootstrap styling. case 1222
* Colors
 - Defold colors in variables.less
 - Colored wells
 - Colored slashes
* Moved bootstrap-defold.css to defold.less
* Replaced buttons.less with buttons-defold.less
 - Flat buttons
* Removed text-shadow in navbar
* Removed margin-hack for small devices

--- a/com.dynamo.cr/com.dynamo.cr.web2/less/bootstrap.less
+++ b/com.dynamo.cr/com.dynamo.cr.web2/less/bootstrap.less
@@ -34,7 +34,8 @@
 @import "close.less";
 
 // Components: Buttons & Alerts
-@import "buttons.less";
+//@import "buttons.less";
+@import "buttons-defold.less";
 @import "button-groups.less";
 @import "alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
 
@@ -60,3 +61,6 @@
 
 // Utility classes
 @import "utilities.less"; // Has to be last to override when necessary
+
+// Defold stuff
+@import "defold.less";
