--- a/com.dynamo.cr/com.dynamo.cr.web2/less/navs.less
+++ b/com.dynamo.cr/com.dynamo.cr.web2/less/navs.less
@@ -64,7 +64,7 @@
 .nav-list > .active > a:hover {
   color: @white;
   text-shadow: 0 -1px 0 rgba(0,0,0,.2);
-  background-color: @linkColor;
+  background-color: @orange;
 }
 .nav-list [class^="icon-"] {
   margin-right: 2px;
