--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/base.html
@@ -3,7 +3,6 @@
 <head>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
 <link href="{{root}}bootstrap/css/bootstrap.css" rel="stylesheet">
-<link href="{{root}}bootstrap-defold.css" rel="stylesheet">
 <link href="{{root}}asciidoc-new.css" rel="stylesheet">
 <style type="text/css">
 .sidebar-nav {
@@ -129,7 +128,7 @@
             <div class="row-fluid">
                 <div class="span4">
                     <h3>
-                        <span class="slash">//</span>About
+                        <span class="slash slash-blue">//</span>About
                     </h3>
                     <ul class="unstyled">
                         <li><a href="/blog">Blog</a></li>
@@ -141,7 +140,7 @@
                 </div>
                 <div class="span4">
                     <h3>
-                        <span class="slash">//</span>Social
+                        <span class="slash slash-pink">//</span>Social
                     </h3>
                     <ul class="unstyled social">
                         <li><a href="http://www.facebook.com/pages/Defold/393752703986118" target="_blank" class="social-icon facebook-icon"></a></li>
@@ -150,7 +149,7 @@
                 </div>
                 <div class="span4">
                     <h3>
-                        <span class="slash">//</span>Support
+                        <span class="slash slash-orange">//</span>Support
                     </h3>
                     <ul class="unstyled">
                         <li><a href="/doc">Documentation</a></li>
