--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/doc_index.html
@@ -9,7 +9,7 @@
 
     <div class="row">
         <div class="span4">
-            <div class="well">
+            <div class="well well-blue">
                 <h2>Guides</h2>
                 <ul class="unstyled">
                     <li><a href="/doc/introduction">Introduction</a></li>
@@ -24,14 +24,14 @@
             </div>
         </div>
         <div class="span4">
-            <div class="well">
+            <div class="well well-orange">
                 <h2>Tutorials</h2>
                 <p>Step by step tutorials and videos</p>
                 <ul class="unstyled">
                     <li><a href="/doc/side_scroller">Side-Scroller</a></li>
                 </ul>
             </div>
-            <div class="well">
+            <div class="well well-orange">
                 <h2>Script Samples</h2>
                 <p>Script samples and videos</p>
                 <ul class="unstyled">
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="span4">
-            <div class="well">
+            <div class="well well-pink">
                 <h2>Reference</h2>
                 <p>Script function and message reference</p>
                 <ul class="unstyled">
