--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/plans.html
@@ -5,7 +5,7 @@
     </div>
     <div class="row">
         <div class="span4">
-            <div class="well pricing">
+            <div class="well well-blue pricing">
                 <h1>Free</h1>
                 <h2>
                     $0<small>/mo</small>
@@ -14,11 +14,11 @@
                     <li>Team size 1</li>
                     <li>5 Projects</li>
                 </ul>
-                <button class="btn btn-success">Sign Up</button>
+                <button class="btn btn-success btn-large">Sign Up</button>
             </div>
         </div>
         <div class="span4">
-            <div class="well pricing">
+            <div class="well well-orange pricing">
                 <h1>Small</h1>
                 <h2>
                     $20<small>/mo</small>
@@ -27,11 +27,11 @@
                     <li>Team size 2</li>
                     <li>5 Projects</li>
                 </ul>
-                <button class="btn btn-success">Sign Up</button>
+                <button class="btn btn-success btn-large">Sign Up</button>
             </div>
         </div>
         <div class="span4">
-            <div class="well pricing">
+            <div class="well well-pink pricing">
                 <h1>Medium</h1>
                 <h2>
                     $150<small>/mo</small>
@@ -40,7 +40,7 @@
                     <li>Team size 3+</li>
                     <li>5 Projects</li>
                 </ul>
-                <button class="btn btn-success">Sign Up</button>
+                <button class="btn btn-success btn-large">Sign Up</button>
             </div>
         </div>
     </div>
