--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/ref.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/ref.html
@@ -21,7 +21,7 @@
     <div class="row">
 
     <div class="span3">
-        <div class="well sidebar-nav">
+        <div class="well well-green sidebar-nav">
             <ul class="nav nav-list">
                 <li class="nav-header">Reference</li>
                 <li><a href="engine">Engine</a></li>
@@ -35,7 +35,7 @@
     </div>
 
     <div class="span9">
-    <div class="well">
+    <div class="well well-blue">
 
     {% if functions %}
     <h2>Functions</h2>
