--- a/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap/css/bootstrap-responsive.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/bootstrap/css/bootstrap-responsive.css
@@ -679,9 +679,6 @@
   }
 }
 
-/*
-// Navbar collapse on small screens disabled
-NOTE: Defold change
 @media (max-width: 979px) {
   body {
     padding-top: 0;
@@ -726,14 +723,14 @@ NOTE: Defold change
     display: none;
   }
   .nav-collapse .nav .nav-header {
-    color: #999999;
+    color: #ffffff;
     text-shadow: none;
   }
   .nav-collapse .nav > li > a,
   .nav-collapse .dropdown-menu a {
     padding: 6px 15px;
     font-weight: bold;
-    color: #999999;
+    color: #ffffff;
     -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
             border-radius: 3px;
@@ -750,7 +747,7 @@ NOTE: Defold change
   }
   .nav-collapse .nav > li > a:hover,
   .nav-collapse .dropdown-menu a:hover {
-    background-color: #222222;
+    background-color: #00b4ff;
   }
   .nav-collapse.in .btn-group {
     padding: 0;
@@ -786,8 +783,8 @@ NOTE: Defold change
     float: none;
     padding: 9px 15px;
     margin: 9px 0;
-    border-top: 1px solid #222222;
-    border-bottom: 1px solid #222222;
+    border-top: 1px solid #00b4ff;
+    border-bottom: 1px solid #00b4ff;
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
        -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
@@ -809,7 +806,6 @@ NOTE: Defold change
     padding-left: 10px;
   }
 }
-*/
 
 @media (min-width: 980px) {
   .nav-collapse.collapse {
