--- a/com.dynamo.cr/com.dynamo.cr.web2/war/landing.css
+++ b/com.dynamo.cr/com.dynamo.cr.web2/war/landing.css
@@ -1,4 +1,6 @@
-/* This file is a bit messy but it's only used for the landing page */
+/* This file is a bit messy but it's only used for the landing page
+   TODO: We should use less
+  */
 body {
     padding-top: 0px;
 }
