--- a/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
+++ b/com.dynamo.cr/com.dynamo.cr.web2/templates/landing.html
@@ -109,7 +109,7 @@
             <form onsubmit="return signUp();" class="validate form-inline">
                 <input type="email" value="" style="padding: 9px 14px;" class="span4 input-large email" id="email"
                     placeholder="email address" required="">
-                <button type="submit" class="btn2 _btn-primary _btn btn-large">Sign up</button>
+                <button type="submit" class="btn btn-primary btn-large">Sign up</button>
             </form>
         </div>
     </div>
